# haproxy-translate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COVERAGE_REPORT.md  CURRENT_SESSION.md  DEVELOPMENT.md  FEATURES.md  FEATURE_MATRIX.md  FEATURE_PARITY_REPORT.md  GLOBAL_DIRECTIVES_COMPLETE_LIST.csv  GLOBAL_DIRECTIVES_INVESTIGATION.md  GLOBAL_INVESTIGATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  USAGE.md  generate_parity_report.py  manage.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  PATTERNS.md  QUICK_START.md  SYNTAX_REFERENCE.md
docs/archive/: CONTINUED_SESSION_PROGRESS.md  COVERAGE_REPORT.md  CURRENT_SESSION.md  GLOBAL_DIRECTIVES_INVESTIGATION.md  GLOBAL_DIRECTIVES_QUICK_REFERENCE.md  GLOBAL_DIRECTIVES_README.md  GLOBAL_INVESTIGATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PROJECT_PLAN.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  STATUS_SUMMARY.md
examples/: 01-simple-loadbalancer.hap  02-ssl-termination.hap  03-acl-routing.hap  04-dynamic-scaling.hap  05-multi-environment.hap  README.md  advanced.hap  basic.hap  comprehensive_http_actions.hap  comprehensive_showcase.hap  phase1_bind_options.hap  phase1_features.hap  phase2_features.hap  phase3_features.hap  phase4a_features.hap  production-complete.dsl  production-complete.hap  production_global_config.hap
src/haproxy_translator/: __init__.py  __main__.py
src/haproxy_translator/cli/: main.py
src/haproxy_translator/codegen/: haproxy.py
src/haproxy_translator/grammars/: haproxy_dsl.lark
src/haproxy_translator/ir/: __init__.py  nodes.py
src/haproxy_translator/lua/: manager.py
src/haproxy_translator/parsers/: __init__.py  base.py  dsl_parser.py
src/haproxy_translator/transformers/: dsl_transformer.py  loop_unroller.py  template_expander.py  variable_resolver.py
src/haproxy_translator/utils/: errors.py
src/haproxy_translator/validators/: __init__.py  security.py  semantic.py
tests/: conftest.py  test_advanced_checks.py  test_advanced_features_coverage.py  test_backend_hash.py  test_backend_http_directives.py  test_basic_translation.py  test_capacity_planning.py  test_connection_management.py  test_coverage_100_percent.py  test_critical_features.py  test_declare_capture.py  test_description.py  test_disabled_enabled_id.py  test_dispatch.py  test_documentation_examples.py  test_email_alert.py  test_error_log_format.py  test_errorfiles.py  test_external_check.py  test_filters.py  test_final_100_percent_coverage.py  test_guid.py  test_hash_preserve_affinity.py  test_http_after_response.py  test_http_error.py  test_http_resilience.py  test_http_reuse.py  test_load_balancing.py  test_load_server_state.py  test_log_steps.py  test_logging.py  test_monitoring.py  test_persist_directives.py  test_persist_rdp_cookie.py  test_phase10_resource_limits.py  test_phase10_server_state.py  test_phase10_threading.py  test_phase11_ssl_paths.py  test_phase12_httpclient.py  test_phase12_lua.py  (+23 more)
tests/test_cli/: test_cli_main.py  test_main.py
tests/test_codegen/: __init__.py  test_coverage_gaps.py  test_edge_cases.py  test_haproxy_codegen.py  test_missing_coverage.py
tests/test_ir/: test_node_str_methods.py
tests/test_lua/: __init__.py  test_manager.py
tests/test_parser/: test_advanced_timeouts.py  test_all_server_options.py  test_balance_algorithms.py  test_bind_options.py  test_common_options.py  test_compact_syntax.py  test_compression_tuning_global_directives.py  test_critical9_features.py  test_default_server.py  test_errorloc.py  test_expressions.py  test_global_tuning.py  test_grammar.py  test_health_check_expect.py  test_http_actions.py  test_http_actions_advanced.py  test_http_timeouts.py  test_listen_section.py  test_missing_server_options.py  test_monitor_uri.py  test_parser_coverage.py  test_phase1_bind_options.py  test_phase1_global_directives.py  test_phase2_global_directives.py  test_phase3_global_directives.py  test_phase4a_global_directives.py  test_phase4b_part1_global_directives.py  test_phase4b_part2_global_directives.py  test_phase4b_part3_global_directives.py  test_phase4b_part4_global_directives.py  test_server_advanced_options.py  test_server_extended_options.py  test_server_ssl_options.py  test_ssl_hardening.py  test_stick_tables.py  test_time_unit_regression.py
tests/test_parsers/: test_base.py
tests/test_transformer/: test_loop_unroller_coverage.py  test_variable_resolver_coverage.py
tests/test_transformers/: test_acl_templates.py  test_backend_templates.py  test_dsl_transformer_coverage.py  test_dsl_transformer_final.py  test_dsl_transformer_more_coverage.py  test_dsl_transformer_remaining.py  test_dsl_transformer_targeted.py  test_edge_case_coverage.py  test_health_check_templates.py  test_loop_unroller.py  test_loop_unrolling.py  test_template_expansion.py  test_variable_resolution.py
tests/test_utils/: test_errors.py
tests/test_validators/: __init__.py  test_security.py  test_semantic_validation.py  test_validator_edge_cases.py
tools/: generate_parity_report.py
