[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haproxy-config-translator"
version = "0.1.0"
description = "Modern, powerful configuration translator for HAProxy with pluggable parsers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HAProxy Config Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "lark>=1.1.9",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]
hcl = [
    "python-hcl2>=4.3.2",
]

[project.scripts]
haproxy-translate = "haproxy_translator.cli.main:cli"

[project.urls]
Homepage = "https://github.com/haproxy/config-translator"
Documentation = "https://haproxy-config-translator.readthedocs.io"
Repository = "https://github.com/haproxy/config-translator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haproxy_translator = ["grammars/*.lark", "codegen/templates/*.j2"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=haproxy_translator --cov-report=html --cov-report=term"
