[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haproxy-config-translator"
version = "0.4.0"
description = "Modern, powerful configuration translator for HAProxy with pluggable parsers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HAProxy Config Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "lark>=1.1.9",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "types-PyYAML>=6.0.12",
]
hcl = [
    "python-hcl2>=4.3.2",
]

[project.scripts]
haproxy-translate = "haproxy_translator.cli.main:cli"

[project.urls]
Homepage = "https://github.com/haproxy/config-translator"
Documentation = "https://haproxy-config-translator.readthedocs.io"
Repository = "https://github.com/haproxy/config-translator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haproxy_translator = ["grammars/*.lark", "codegen/templates/*.j2"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
    "SIM108",  # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # magic values ok in tests
    "S101",     # assert ok in tests
]
"src/haproxy_translator/transformers/dsl_transformer.py" = [
    "N802",     # Lark transformer methods must match grammar terminals (uppercase)
    "PLR0912",  # Complex transformer methods
    "PLR0915",  # Many statements in transformer methods
    "C901",     # Complex transformer methods
    "PLC0415",  # Lazy imports for os module in env_call
]
"src/haproxy_translator/cli/main.py" = [
    "PLR0912",  # CLI functions can have many branches
    "PLR0913",  # CLI functions can have many arguments
    "PLC0415",  # Lazy imports for watchdog (optional dependency) and time
]
"src/haproxy_translator/codegen/haproxy.py" = [
    "PLR0912",  # Complex code generation functions have many branches
]
"src/haproxy_translator/lua/manager.py" = [
    "PLC0415",  # Lazy import for re module in sanitize function
]

[tool.ruff.lint.isort]
known-first-party = ["haproxy_translator"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "lark.*",
    "watchdog.*",
    "click.*",
    "rich.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "xfail: marks tests as expected to fail",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Development commands available via Makefile
# Run: make help
